kubernetes/nginx-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-27074
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
