kubernetes/nginx-route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: nginx-27074
  name: nginx-route
spec:
  to:
    kind: Service
    name: nginx-service
  port:
    targetPort: 80
  tls:
    termination: edge
